Implement JWT authentication and authorization; add JwtAuthenticationFilter, JwtAuthorizationFilter, and SecurityConfig for security management, and create LoginController and DTOs for login handling